// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogCard /> Should render correctly 1`] = `
<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG"
    href="/blog/asdfg"
  >
    <div
      class="sc-ftTHYK kgGuVS"
    >
      <div
        class="sc-pyfCe hIuAmP"
      />
      <div
        class="sc-jrcTuL bNrLFz"
      >
        <div
          aria-hidden="true"
          class="sc-bjfHbI iUbfsq"
        >
          <div
            class="sc-idXgbr kTdaNJ date container"
          >
            <div
              class="sc-dmctIk eXRkVq"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="sc-kgTSHT dYPYRT"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                NaN
              </span>
            </div>
            <div
              class="sc-kgTSHT dYPYRT"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="sc-dIfARi dFDwOP"
          >
            <h1
              class="sc-cwSeag klDffp"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly when deleted 1`] = `
<div>
  <a
    aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
    class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG"
    href="/blog/mndyd8"
  >
    <div
      class="sc-ftTHYK kgGuVS"
    >
      <div
        class="sc-pyfCe hIuAmP"
      />
      <div
        class="sc-jrcTuL bNrLFz"
      >
        <div
          aria-hidden="true"
          class="sc-bjfHbI iUbfsq"
        >
          <div
            class="sc-idXgbr kTdaNJ date container"
          >
            <div
              class="sc-dmctIk eXRkVq"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-kgTSHT dYPYRT"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-kgTSHT dYPYRT"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-dIfARi dFDwOP"
          >
            <h1
              class="sc-cwSeag klDffp"
            >
              Untitled blog (DELETED)
            </h1>
            <div
              class="sc-bBABsx cunnvH"
            >
              <div
                class="sc-bYMpWt"
              >
                <span
                  class="sc-kMjNwy eqCJMi"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-hHTYSt kttPzG"
          >
            <div
              class="sc-csuSiG hrlAfi sc-fLcnxK gWRaxH"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="sc-eDWCr ehKXvD"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-bqWxrE cXngGV"
                >
                  <div
                    class="sc-kDvujY dXQYaa sc-ksBlkl bJWrYm"
                  >
                    <div
                      class="sc-ipEyDJ iUsWHm"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="sc-hBxehG eeNmOb"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fnGiBr bPPEnj"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="sc-hBxehG kMubnv"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fnGiBr hCjKzr"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with all parameters supplied 1`] = `
<div>
  <a
    aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
    class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG"
    href="/blog/zxywvuts"
  >
    <div
      class="sc-ftTHYK kgGuVS"
    >
      <div
        class="sc-pyfCe hIuAmP"
      />
      <div
        class="sc-jrcTuL bNrLFz"
      >
        <div
          aria-hidden="true"
          class="sc-bjfHbI iUbfsq"
        >
          <div
            class="sc-idXgbr kTdaNJ date container"
          >
            <div
              class="sc-dmctIk eXRkVq"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-kgTSHT dYPYRT"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-kgTSHT dYPYRT"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-dIfARi dFDwOP"
          >
            <h1
              class="sc-cwSeag klDffp"
            >
              St Ives  2018
            </h1>
            <div
              class="sc-bBABsx cunnvH"
            >
              <div
                class="sc-bYMpWt"
              >
                <span
                  class="sc-kMjNwy eqCJMi"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-hHTYSt kttPzG"
          >
            <div
              class="sc-csuSiG hrlAfi sc-fLcnxK gWRaxH"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="sc-eDWCr ehKXvD"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-bqWxrE cXngGV"
                >
                  <div
                    class="sc-kDvujY dXQYaa sc-ksBlkl bJWrYm"
                  >
                    <div
                      class="sc-ipEyDJ iUsWHm"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="sc-hBxehG eeNmOb"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fnGiBr bPPEnj"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="sc-hBxehG kMubnv"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fnGiBr hCjKzr"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with custom className 1`] = `
<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG test-custom-classname"
    href="/blog/asdfg"
  >
    <div
      class="sc-ftTHYK kgGuVS"
    >
      <div
        class="sc-pyfCe hIuAmP"
      />
      <div
        class="sc-jrcTuL bNrLFz"
      >
        <div
          aria-hidden="true"
          class="sc-bjfHbI iUbfsq"
        >
          <div
            class="sc-idXgbr kTdaNJ date container"
          >
            <div
              class="sc-dmctIk eXRkVq"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="sc-kgTSHT dYPYRT"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                NaN
              </span>
            </div>
            <div
              class="sc-kgTSHT dYPYRT"
            >
              <span
                class="sc-gikAfH bJDgJT"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="sc-dIfARi dFDwOP"
          >
            <h1
              class="sc-cwSeag klDffp"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogsList /> Should render correctly 1`] = `
<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
      href="/blog/asdfg"
    >
      <div
        class="sc-ftTHYK kgGuVS"
      >
        <div
          class="sc-pyfCe hIuAmP"
        />
        <div
          class="sc-jrcTuL bNrLFz"
        >
          <div
            aria-hidden="true"
            class="sc-bjfHbI iUbfsq"
          >
            <div
              class="sc-idXgbr kTdaNJ date container"
            >
              <div
                class="sc-dmctIk eXRkVq"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-dIfARi dFDwOP"
            >
              <h1
                class="sc-cwSeag klDffp"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-ftTHYK kgGuVS"
      >
        <div
          class="sc-pyfCe hIuAmP"
        />
        <div
          class="sc-jrcTuL bNrLFz"
        >
          <div
            aria-hidden="true"
            class="sc-bjfHbI iUbfsq"
          >
            <div
              class="sc-idXgbr kTdaNJ date container"
            >
              <div
                class="sc-dmctIk eXRkVq"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIfARi dFDwOP"
            >
              <h1
                class="sc-cwSeag klDffp"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-bBABsx cunnvH"
              >
                <div
                  class="sc-bYMpWt"
                >
                  <span
                    class="sc-kMjNwy eqCJMi"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHTYSt kttPzG"
            >
              <div
                class="sc-csuSiG hrlAfi sc-fLcnxK gWRaxH"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="sc-eDWCr ehKXvD"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-bqWxrE cXngGV"
                  >
                    <div
                      class="sc-kDvujY dXQYaa sc-ksBlkl bJWrYm"
                    >
                      <div
                        class="sc-ipEyDJ iUsWHm"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG eeNmOb"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr bPPEnj"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG kMubnv"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr hCjKzr"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
      href="/blog/mndyd8"
    >
      <div
        class="sc-ftTHYK kgGuVS"
      >
        <div
          class="sc-pyfCe hIuAmP"
        />
        <div
          class="sc-jrcTuL bNrLFz"
        >
          <div
            aria-hidden="true"
            class="sc-bjfHbI iUbfsq"
          >
            <div
              class="sc-idXgbr kTdaNJ date container"
            >
              <div
                class="sc-dmctIk eXRkVq"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIfARi dFDwOP"
            >
              <h1
                class="sc-cwSeag klDffp"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-bBABsx cunnvH"
              >
                <div
                  class="sc-bYMpWt"
                >
                  <span
                    class="sc-kMjNwy eqCJMi"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHTYSt kttPzG"
            >
              <div
                class="sc-csuSiG hrlAfi sc-fLcnxK gWRaxH"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="sc-eDWCr ehKXvD"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-bqWxrE cXngGV"
                  >
                    <div
                      class="sc-kDvujY dXQYaa sc-ksBlkl bJWrYm"
                    >
                      <div
                        class="sc-ipEyDJ iUsWHm"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG eeNmOb"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr bPPEnj"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG kMubnv"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr hCjKzr"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="test-custom-classname"
  >
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
      href="/blog/asdfg"
    >
      <div
        class="sc-ftTHYK kgGuVS"
      >
        <div
          class="sc-pyfCe hIuAmP"
        />
        <div
          class="sc-jrcTuL bNrLFz"
        >
          <div
            aria-hidden="true"
            class="sc-bjfHbI iUbfsq"
          >
            <div
              class="sc-idXgbr kTdaNJ date container"
            >
              <div
                class="sc-dmctIk eXRkVq"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-dIfARi dFDwOP"
            >
              <h1
                class="sc-cwSeag klDffp"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-ftTHYK kgGuVS"
      >
        <div
          class="sc-pyfCe hIuAmP"
        />
        <div
          class="sc-jrcTuL bNrLFz"
        >
          <div
            aria-hidden="true"
            class="sc-bjfHbI iUbfsq"
          >
            <div
              class="sc-idXgbr kTdaNJ date container"
            >
              <div
                class="sc-dmctIk eXRkVq"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIfARi dFDwOP"
            >
              <h1
                class="sc-cwSeag klDffp"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-bBABsx cunnvH"
              >
                <div
                  class="sc-bYMpWt"
                >
                  <span
                    class="sc-kMjNwy eqCJMi"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHTYSt kttPzG"
            >
              <div
                class="sc-csuSiG hrlAfi sc-fLcnxK gWRaxH"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="sc-eDWCr ehKXvD"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-bqWxrE cXngGV"
                  >
                    <div
                      class="sc-kDvujY dXQYaa sc-ksBlkl bJWrYm"
                    >
                      <div
                        class="sc-ipEyDJ iUsWHm"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG eeNmOb"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr bPPEnj"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG kMubnv"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr hCjKzr"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG blogs-liststyles__StyledBlogCard-sc-if7ctk-1 dxPvVZ"
      href="/blog/mndyd8"
    >
      <div
        class="sc-ftTHYK kgGuVS"
      >
        <div
          class="sc-pyfCe hIuAmP"
        />
        <div
          class="sc-jrcTuL bNrLFz"
        >
          <div
            aria-hidden="true"
            class="sc-bjfHbI iUbfsq"
          >
            <div
              class="sc-idXgbr kTdaNJ date container"
            >
              <div
                class="sc-dmctIk eXRkVq"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIfARi dFDwOP"
            >
              <h1
                class="sc-cwSeag klDffp"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-bBABsx cunnvH"
              >
                <div
                  class="sc-bYMpWt"
                >
                  <span
                    class="sc-kMjNwy eqCJMi"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHTYSt kttPzG"
            >
              <div
                class="sc-csuSiG hrlAfi sc-fLcnxK gWRaxH"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="sc-eDWCr ehKXvD"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-bqWxrE cXngGV"
                  >
                    <div
                      class="sc-kDvujY dXQYaa sc-ksBlkl bJWrYm"
                    >
                      <div
                        class="sc-ipEyDJ iUsWHm"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG eeNmOb"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr bPPEnj"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG kMubnv"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr hCjKzr"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with deleteBlog function 1`] = `
<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG blogs-liststyles__StyledBlogCard-sc-if7ctk-1 WAJUB"
      href="/blog/asdfg"
    >
      <div
        class="sc-ftTHYK kgGuVS"
      >
        <div
          class="sc-pyfCe hIuAmP"
        />
        <div
          class="sc-jrcTuL bNrLFz"
        >
          <div
            aria-hidden="true"
            class="sc-bjfHbI iUbfsq"
          >
            <div
              class="sc-idXgbr kTdaNJ date container"
            >
              <div
                class="sc-dmctIk eXRkVq"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-dIfARi dFDwOP"
            >
              <h1
                class="sc-cwSeag klDffp"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-dkrFOg gmDzvV blogs-liststyles__StyledButton-sc-if7ctk-2 gQJRQv"
      type="button"
    >
      <span
        class="sc-eDvSVe iqkXFe"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG blogs-liststyles__StyledBlogCard-sc-if7ctk-1 WAJUB"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-ftTHYK kgGuVS"
      >
        <div
          class="sc-pyfCe hIuAmP"
        />
        <div
          class="sc-jrcTuL bNrLFz"
        >
          <div
            aria-hidden="true"
            class="sc-bjfHbI iUbfsq"
          >
            <div
              class="sc-idXgbr kTdaNJ date container"
            >
              <div
                class="sc-dmctIk eXRkVq"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIfARi dFDwOP"
            >
              <h1
                class="sc-cwSeag klDffp"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-bBABsx cunnvH"
              >
                <div
                  class="sc-bYMpWt"
                >
                  <span
                    class="sc-kMjNwy eqCJMi"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHTYSt kttPzG"
            >
              <div
                class="sc-csuSiG hrlAfi sc-fLcnxK gWRaxH"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="sc-eDWCr ehKXvD"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-bqWxrE cXngGV"
                  >
                    <div
                      class="sc-kDvujY dXQYaa sc-ksBlkl bJWrYm"
                    >
                      <div
                        class="sc-ipEyDJ iUsWHm"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG eeNmOb"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr bPPEnj"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG kMubnv"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr hCjKzr"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-dkrFOg gmDzvV blogs-liststyles__StyledButton-sc-if7ctk-2 gQJRQv"
      type="button"
    >
      <span
        class="sc-eDvSVe iqkXFe"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-iBYQkv bOutrg sc-fEXmlR dIXePG blogs-liststyles__StyledBlogCard-sc-if7ctk-1 WAJUB"
      href="/blog/mndyd8"
    >
      <div
        class="sc-ftTHYK kgGuVS"
      >
        <div
          class="sc-pyfCe hIuAmP"
        />
        <div
          class="sc-jrcTuL bNrLFz"
        >
          <div
            aria-hidden="true"
            class="sc-bjfHbI iUbfsq"
          >
            <div
              class="sc-idXgbr kTdaNJ date container"
            >
              <div
                class="sc-dmctIk eXRkVq"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgTSHT dYPYRT"
              >
                <span
                  class="sc-gikAfH bJDgJT"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIfARi dFDwOP"
            >
              <h1
                class="sc-cwSeag klDffp"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-bBABsx cunnvH"
              >
                <div
                  class="sc-bYMpWt"
                >
                  <span
                    class="sc-kMjNwy eqCJMi"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHTYSt kttPzG"
            >
              <div
                class="sc-csuSiG hrlAfi sc-fLcnxK gWRaxH"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="sc-eDWCr ehKXvD"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-bqWxrE cXngGV"
                  >
                    <div
                      class="sc-kDvujY dXQYaa sc-ksBlkl bJWrYm"
                    >
                      <div
                        class="sc-ipEyDJ iUsWHm"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG eeNmOb"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr bPPEnj"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hBxehG kMubnv"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnGiBr hCjKzr"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-dkrFOg fjPSpx blogs-liststyles__StyledButton-sc-if7ctk-2 gQJRQv"
      disabled=""
      type="button"
    >
      <span
        class="sc-eDvSVe iqkXFe"
      >
        Delete blog
      </span>
    </button>
  </div>
</div>
`;
